--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.5",
     "fs-extra": "^11.2.0",
     "fuse.js": "^7.0.0",
+    "html-to-text": "^9.0.5",
     "telegraf": "^4.16.3"
   }
 }
