--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 TELEGRAM_TOKEN=7940573398:A..........
 BOT_NAME=رضى الرحمن غايتي
+PUPPETEER_EXECUTABLE_PATH=/usr/bin/chromium-browser
+USE_HADITH_API=true
